src/test/ui/issues/issue-13497-2.nll.stderr
error[E0515]: cannot return value referencing local variable `rawLines`
  --> $DIR/issue-13497-2.rs:3:5
   |
LL |       rawLines
   |       ^-------
   |       |
   |  _____`rawLines` is borrowed here
   | |
LL | |         .iter().map(|l| l.trim()).collect()
   | |___________________________________________^ returns a value referencing data owned by the current function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0515`.
